--- a/content/1/1-1-your-first-java-program.mdx
+++ b/content/1/1-1-your-first-java-program.mdx
@@ -1,5 +1,6 @@
 ---
 title: Your First Java Program
+section: 1.1
 ---
 import Youtube from "../../src/components/embed/youtube.astro"
 import Quiz from "../../src/components/interactive/quiz.svelte"
