Updates to pagemap

--- a/content-legacy/1/1-introduction.mdx
+++ b/content-legacy/1/1-introduction.mdx
@@ -1,6 +1,7 @@
 ---
 title: Introduction
 section: 1
+slug: introduction
 ---
 
 This section covers basic features of Java and how to run programs on the command line.
