--- a/content-legacy/1/1.1-your-first-java-program.mdx
+++ b/content-legacy/1/1.1-your-first-java-program.mdx
@@ -1,6 +1,7 @@
 ---
 title: Your First Java Program
 section: 1.1
+slug: your-first-java-program
 ---
 import Youtube from "../../src/components/embed/youtube.astro"
 import Quiz from "../../src/components/interactive/quiz.svelte"
