--- a/content-legacy/1/1.2-java-workflow.mdx
+++ b/content-legacy/1/1.2-java-workflow.mdx
@@ -1,6 +1,7 @@
 ---
 title: Java Workflow
 section: 1.2
+slug: java-workflow
 ---
 
 Taking a program from a `.java` file into an executable has two main steps in Java: **compilation** and **interpretation**.&#x20;
