--- a/content-legacy/1/1.4-exercises.mdx
+++ b/content-legacy/1/1.4-exercises.mdx
@@ -1,6 +1,7 @@
 ---
 title: Exercises
 section: 1.4
+slug: exercises-introduction
 ---
 
 1. **True/False**: All variables, parameters, and methods must have a declared type in Java, and the type can never change.
