--- a/content-legacy/2/2-defining-and-using-classes.mdx
+++ b/content-legacy/2/2-defining-and-using-classes.mdx
@@ -1,6 +1,7 @@
 ---
 title: Defining and Using Classes
 section: 2
+slug: defining-and-using-classes
 ---
 
 If you do not have prior Java experience, we recommend that you work through the exercises in [HW0](http://sp19.datastructur.es/materials/hw/hw0/hw0.html) before reading this chapter. It will cover various syntax issues that we will not discuss in the book.
