--- a/content-legacy/3/3-references-recursion-and-lists.mdx
+++ b/content-legacy/3/3-references-recursion-and-lists.mdx
@@ -1,6 +1,7 @@
 ---
 title: References, Recursion, and Lists
 section: 3
+slug: references-recursion-and-lists
 ---
 
 ### Lists <a href="#lists" id="lists"></a>
