--- a/content-legacy/4/4-sllists.mdx
+++ b/content-legacy/4/4-sllists.mdx
@@ -1,6 +1,7 @@
 ---
 title: SLLists
 section: 4
+slug: slllists
 ---
 
 In Chapter 3, we built the `IntList` class, a list data structure that can technically do all the things a list can do. However, in practice, the `IntList` suffers from the fact that it is fairly awkward to use, resulting in code that is hard to read and maintain.
