--- a/content-legacy/5/5-dllists.mdx
+++ b/content-legacy/5/5-dllists.mdx
@@ -1,6 +1,7 @@
 ---
 title: DLLists
 section: 5
+slug: dllists
 ---
 
 In Chapter 2.2, we built the `SLList` class, which was better than our earlier naked recursive `IntList` data structure. In this section, we'll wrap up our discussion of linked lists, and also start learning the foundations of arrays that we'll need for an array based list we'll call an `AList`. Along the way, we'll also reveal the secret of why we used the awkward name `SLList` in the previous chapter.
