--- a/content-legacy/6/6-arrays.mdx
+++ b/content-legacy/6/6-arrays.mdx
@@ -1,6 +1,7 @@
 ---
 title: Arrays
 section: 6
+slug: arrays
 ---
 
 So far, we've seen how to harness recursive class definitions to create an expandable list class, including the `IntList`, `SLList`, and `DLList`. In the next two sections of this book, we'll discuss how to build a list class using arrays.
