--- a/content-legacy/7/7-testing.mdx
+++ b/content-legacy/7/7-testing.mdx
@@ -1,6 +1,7 @@
 ---
 title: Testing
 section: 7
+slug: testing
 ---
 
 ### Testing and Selection Sort <a href="#testing-and-selection-sort" id="testing-and-selection-sort"></a>
