--- a/content-legacy/8/8-arraylist.mdx
+++ b/content-legacy/8/8-arraylist.mdx
@@ -1,6 +1,7 @@
 ---
 title: ArrayList
 section: 8
+slug: arraylist
 ---
 
 In this section, we'll build a new class called `AList` that can be used to store arbitrarily long lists of data, similar to our `DLList`. Unlike the `DLList`, the `AList` will use arrays to store data instead of a linked list.
