--- a/content-legacy/9/9.1-the-problem-of-generality.mdx
+++ b/content-legacy/9/9.1-the-problem-of-generality.mdx
@@ -1,6 +1,7 @@
 ---
 title: The Problem of Generality
 section: 9.1
+slug: the-problem-of-generality
 ---
 
 Recall the two list classes we created last week: SLList and AList. If you take a look at their documentation, you'll notice that they are very similar. In fact, all of their supporting methods are the same!
