--- a/content-legacy/9/9.2-hypernyms-hyponyms.mdx
+++ b/content-legacy/9/9.2-hypernyms-hyponyms.mdx
@@ -1,6 +1,7 @@
 ---
 title: Hypernyms, Hyponyms, and Interface Inheritance
 section: 9.2
+slug: hypernyms-hyponyms-and-interface-inheritance
 ---
 
 In the English language and life in general, there exist logical hierarchies to words and objects.
