--- a/content-legacy/9/9.3-overriding-interface-inheritance.mdx
+++ b/content-legacy/9/9.3-overriding-interface-inheritance.mdx
@@ -1,6 +1,7 @@
 ---
 title: Overriding, Interface Inheritance
 section: 9.3
+slug: overriding-interface-inheritance
 ---
 
 ### Overriding <a href="#overriding" id="overriding"></a>
