--- a/content-legacy/9/9.4-implementation-inheritance-default.mdx
+++ b/content-legacy/9/9.4-implementation-inheritance-default.mdx
@@ -1,6 +1,7 @@
 ---
 title: Implementation Inheritance, default
 section: 9.4
+slug: implementation-inheritance
 ---
 
 Previously, we had an interface List61B that only had method headers identifying **what** List61B's should do. But, now we will see that we can write methods in List61B that already have their implementation filled out. These methods identify **how** hypernyms of List61B should behave.
