--- a/content-legacy/9/9.5-implementation-vs.-interface-inheritance.mdx
+++ b/content-legacy/9/9.5-implementation-vs.-interface-inheritance.mdx
@@ -1,6 +1,7 @@
 ---
 title: Implementation vs. Interface Inheritance
 section: 9.5
+slug: implementation-vs-interface-inheritance
 ---
 
 How do we differentiate between "interface inheritance" and "implementation inheritance"? Well, you can use this simple distinction:
