--- a/content-legacy/1/1.3-basic-java-features.mdx
+++ b/content-legacy/1/1.3-basic-java-features.mdx
@@ -1,6 +1,7 @@
 ---
 title: Basic Java Features
 section: 1.3
+slug: basic-java-features
 ---
 
 #### Variables and Loops <a href="#variables-and-loops" id="variables-and-loops"></a>
